--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -3,7 +3,7 @@
   <input placeholder="username" type="text" class="form-control dk-lower-margin"/>
   <input placeholder="password" type="password" class="form-control dk-lower-margin"/>
   <input placeholder="verify password" type="password" class="form-control dk-lower-margin"/>
-  <a class="btn btn-primary btn-block" href="profile.html">Register</a>
-  <a class="btn btn-danger btn-block" href="login.html" >Cancel</a>
+  <a class="btn btn-primary btn-block" [routerLink]="['/register']">Register</a>
+  <a class="btn btn-danger btn-block" [routerLink]="['/login']">Cancel</a>
 
 </div>
