--- a/src/app/components/widget/widget-choose/widget-choose.component.html
+++ b/src/app/components/widget/widget-choose/widget-choose.component.html
@@ -40,7 +40,7 @@
     </ul>
   </div>
   <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-    <a href="../user/profile.html" class="navbar-brand pull-right">
+    <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
       <span class="glyphicon glyphicon-user text-primary"></span>
     </a>
   </nav>
