--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
     <div class=" row">
-      <a href="../user/profile.html" class="navbar-brand">
+      <a [routerLink]="['/user/:uid']" class="navbar-brand">
         <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
       </a>
       <p class="dk-no-margin dk-no-side-padding navbar-brand"><b>Website</b></p>
-      <a href="website-new.html" class="pull-right navbar-brand">
+      <a [routerLink]="['/user/:uid/website/new']" class="pull-right navbar-brand">
         <span class="glyphicon glyphicon-plus bg-primary"></span>
       </a>
     </div>
@@ -13,33 +13,33 @@
   <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
     <ul class="list-group">
       <li class="list-group-item text-primary dk-borderless row">
-        <a href="../page/page-list.html" class="col-xs-11"> Address Book App </a>
-        <a href="website-edit.html">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="col-xs-11"> Address Book App </a>
+        <a [routerLink]="['/user/:uid/website/:wid']">
           <span class="pull-right glyphicon glyphicon-cog"></span>
         </a>
       </li>
       <li class="list-group-item text-primary dk-borderless row">
-        <a href="../page/page-list.html" class="col-xs-11"> Blogger </a>
-        <a href="website-edit.html">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="col-xs-11"> Blogger </a>
+        <a [routerLink]="['/user/:uid/website/:wid']">
           <span class="pull-right glyphicon glyphicon-cog"></span>
         </a>
       </li>
       <li class="list-group-item text-primary dk-borderless row">
-        <a href="../page/page-list.html" class="col-xs-11"> Blogging App </a>
-        <a href="website-edit.html">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="col-xs-11"> Blogging App </a>
+        <a [routerLink]="['/user/:uid/website/:wid']">
           <span class="pull-right glyphicon glyphicon-cog"></span>
         </a>
       </li>
       <li class="list-group-item text-primary dk-borderless row">
-        <a href="../page/page-list.html" class="col-xs-11"> Script Testing App </a>
-        <a href="website-edit.html">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="col-xs-11"> Script Testing App </a>
+        <a [routerLink]="['/user/:uid/website/:wid']">
           <span class="pull-right glyphicon glyphicon-cog"></span>
         </a>
       </li>
     </ul>
   </div>
   <nav class="navbar navbar-fixed-bottom square bg-primary">
-    <a href="../user/profile.html">
+    <a [routerLink]="['/user/:uid']">
       <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
     </a>
   </nav>
