--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,110 +1,116 @@
 <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-  <a class="bg-secondary navbar-brand" [routerLink]="['/user/:uid/website/:wid/page']">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Widgets </b></p>
-  <a class="bg-secondary pull-right navbar-brand" [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-    <span class="glyphicon glyphicon-plus"></span>
-  </a>
+    <a class="bg-secondary navbar-brand" [routerLink]="['/user/:uid/website/:wid/page']">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Widgets </b></p>
+    <a class="bg-secondary pull-right navbar-brand" [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
+        <span class="glyphicon glyphicon-plus"></span>
+    </a>
 </nav>
 
 <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
-  <div class="col-xs-12">
-    <h1>
-      Lorem ipsum
-    </h1>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-heading.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <h1>
+            Lorem ipsum
+        </h1>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-heading.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12">
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor</h3>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-heading.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor</h3>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-heading.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12">
-    <img class="img-responsive center-block" src="http://lorempixel.com/1920/1080/">
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-image.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <img class="img-responsive center-block" src="http://lorempixel.com/1920/1080/">
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-image.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12">
-    <h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
-      e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </h4>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-heading.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
+            e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </h4>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-heading.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12">
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-heading.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-heading.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12 embed-responsive embed-responsive-16by9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/mW6hFttt_KE" frameborder="0"
-            allowfullscreen>
-    </iframe>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-youtube.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12 embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mW6hFttt_KE" frameborder="0"
+                allowfullscreen>
+        </iframe>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-youtube.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="col-xs-12">
-    <h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
-      e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </h4>
-    <div class="pull-right dk-widget-toolbar">
-      <a href="widget-heading.html" class="custom-widget">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <a href="#" class="custom-widget">
-        <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-      </a>
+    <div class="col-xs-12">
+        <h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
+            e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </h4>
+        <div class="pull-right dk-widget-toolbar">
+            <a href="widget-heading.html" class="custom-widget">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <a href="#" class="custom-widget">
+                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
+            </a>
+        </div>
     </div>
-  </div>
 </div>
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-  <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
-    <span class="glyphicon glyphicon-play"></span>
-  </a>
-  <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
-    <span class="glyphicon glyphicon-eye-open"></span>
-  </a>
-  <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
-    <span class="glyphicon glyphicon-user text-primary"></span>
-  </a>
+    <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
+        <span class="glyphicon glyphicon-play"></span>
+    </a>
+    <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
+        <span class="glyphicon glyphicon-eye-open"></span>
+    </a>
+    <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
+        <span class="glyphicon glyphicon-user text-primary"></span>
+    </a>
 </nav>
