completed user components

--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="login container">
+<div class="container">
+    <!--<div *ngIf="errorFlag" class="alert alert-danger">-->
+        <!--{{errorMsg}}-->
+    <!--</div>-->
     <div *ngIf="errorFlag" class="alert alert-danger">{{errorMsg}}</div>
     <h1>Login</h1>
     <form (ngSubmit)="login()" #f="ngForm">
@@ -8,12 +11,11 @@
             Please enter username!
         </span>
         <input type="password" class="form-control dk-lower-margin" placeholder="password" name="password" ngModel
-               required  #username="ngModel"/>
-        <span class="help-block" *ngIf="!username.valid && username.touched">
+               required  #password="ngModel"/>
+        <span class="help-block" *ngIf="!password.valid && password.touched">
             Please enter password!
         </span>
-        <button class="btn btn-primary btn-block" type="submit"
-        [disabled]="!f.valid">Login</button>
-        <a class="btn btn-success btn-block" [routerLink]="['/register']">Register</a>
+        <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+        <button class="btn btn-success btn-block" type="submit" [routerLink]="['/register']">Register</button>
     </form>
 </div>
