--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
         <div class=" row">
-            <a class="navbar-brand" onclick="history.back()">
+            <a class="navbar-brand" (click)="goBack()">
                 <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
             </a>
             <p class="dk-no-margin dk-no-side-padding navbar-brand"><b>Website</b></p>
