--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -36,8 +36,7 @@
             <form class="form-group" #f="ngForm">
                 <label for="websitename"> Name </label>
                 <input class="form-control dk-lower-margin" id="websitename" name="websitename" ngModel
-                       #websitename="ngModel"
-                       placeholder="Name of the website">
+                       #websitename="ngModel"  placeholder="Name of the website">
                 <label for="websitedesc"> Description </label>
                 <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" name="websitedesc"
                           id="websitedesc" placeholder="Some description about your website" ngModel
