--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,86 +1,59 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="hidden-xs hidden-sm col-md-4 row">
-      <a [routerLink]="['/user/:uid/website']" class="navbar-brand bg-secondary">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <p class="navbar-brand dk-no-side-padding dk-no-margin dk-no-side-padding"><b>Pages</b></p>
-      <a [routerLink]="['/user/:uid/website/:wid/page/new']" class="navbar-brand bg-secondary pull-right">
-        <span class="glyphicon glyphicon-plus"></span>
-      </a>
-    </div>
-    <div>
-      <a class="navbar-brand" [routerLink]="['/user/:uid/website/:wid/page']">
-        <span class="glyphicon glyphicon-remove bg-secondary"></span>
-      </a>
-      <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b>Edit Page</b></p>
-      <a class="navbar-brand pull-right" [routerLink]="['/user/:uid/website/:wid/page']">
-        <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
-      </a>
-    </div>
-  </nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="hidden-xs hidden-sm col-md-4 row">
+            <a [routerLink]="['/user', userId, 'website']" class="navbar-brand bg-secondary">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <p class="navbar-brand dk-no-side-padding dk-no-margin dk-no-side-padding"><b>Pages</b></p>
+            <a [routerLink]="['/user', userId, 'website', websiteId, 'page', 'new']"
+               class="navbar-brand bg-secondary pull-right">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </div>
+        <div>
+            <a class="navbar-brand visible-xs visible-sm"
+               [routerLink]="['/user', userId, 'website', websiteId, 'page']">
+                <span class="glyphicon glyphicon-chevron-left bg-secondary"></span>
+            </a>
+            <p class="navbar-brand text-center dk-no-margin"><b>Edit Page</b></p>
+            <a class="navbar-brand pull-right" (click)="updatePage()">
+                <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
+            </a>
+        </div>
+    </nav>
 
-  <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
-    <div class="col-md-4 hidden-xs hidden-sm">
-      <ul class="list-group">
-        <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
-          <div class="row dk-li-right-margin">
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']"> Blog Posts </a>
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-              <span class="pull-right glyphicon glyphicon-cog"></span>
-            </a>
-          </div>
-        </li>
-        <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
-          <div class="row dk-li-right-margin">
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']"> Blog </a>
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-              <span class="pull-right glyphicon glyphicon-cog"></span>
-            </a>
-          </div>
-        </li>
-        <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
-          <div class="row dk-li-right-margin">
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']"> Home </a>
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-              <span class="pull-right glyphicon glyphicon-cog"></span>
-            </a>
-          </div>
-        </li>
-        <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
-          <div class="row dk-li-right-margin">
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']"> About </a>
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-              <span class="pull-right glyphicon glyphicon-cog"></span>
-            </a>
-          </div>
-        </li>
-        <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
-          <div class="row dk-li-right-margin">
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']"> Contact Us </a>
-            <a [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-              <span class="pull-right glyphicon glyphicon-cog"></span>
-            </a>
-          </div>
-        </li>
-      </ul>
+    <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+        <div class="col-md-4 hidden-xs hidden-sm">
+            <ul class="list-group" *ngFor="let page of pages">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
+                    <div class="row dk-li-right-margin">
+                        <a [routerLink]="['/user', userId, 'website', websiteId, 'page', page['_id'], 'widget']">
+                            {{page['name']}}
+                        </a>
+                        <a [routerLink]="['/user', userId, 'website', websiteId, 'page', page['_id']]">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-md-8">
+            <form class="form-group">
+                <label for="pagename"> Name </label>
+                <input class="form-control dk-lower-margin" id="pagename" name="pagename" value="Lorem Ipsum"
+                       placeholder="Page name" [(ngModel)] = "pagename">
+                <label for="pagedesc"> Description </label>
+                <input class="form-control dk-fixed-width dk-lower-margin" id="pagedesc" name="pagedesc"
+                       placeholder="Page title" [(ngModel)] = "pagedesc" value="Lorem ipsum dolor sit amet">
+                <a class="btn btn-block btn-danger bottom" (click)="deletePage()"> Delete </a>
+            </form>
+        </div>
     </div>
 
-    <div class="col-md-8">
-      <form class="form-group">
-        <label for="page-name"> Name </label>
-        <input class="form-control dk-lower-margin" id="page-name" value="Lorem Ipsum" placeholder="Page name">
-        <label for="page-desc"> Description </label>
-        <input class="form-control dk-fixed-width dk-lower-margin" id="page-desc" placeholder="Page title"
-               value="Lorem ipsum dolor sit amet">
-        <a [routerLink]="['/user/:uid/website/:wid/page']" class="btn btn-block btn-danger bottom"> Delete </a>
-      </form>
-    </div>
-  </div>
-
-  <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
-    <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
-      <span class="text-primary glyphicon glyphicon-user"></span>
-    </a>
-  </nav>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
+        <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
+            <span class="text-primary glyphicon glyphicon-user"></span>
+        </a>
+    </nav>
 </div>
