added widget components

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="hidden-xs hidden-sm col-md-4 row">
-            <a [routerLink]="['/user', userId, 'website']" class="navbar-brand bg-secondary">
+            <a [routerLink]="['/user', userId, 'website', websiteId, 'page']" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <p class="navbar-brand dk-no-side-padding dk-no-margin dk-no-side-padding"><b>Pages</b></p>
