--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,105 +1,59 @@
 <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-    <a class="bg-secondary navbar-brand" [routerLink]="['/user/:uid/website/:wid/page']">
+    <a class="bg-secondary navbar-brand" [routerLink]="['/user', userId, 'website', websiteId, 'page']">
         <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Widgets </b></p>
-    <a class="bg-secondary pull-right navbar-brand" [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
+    <a class="bg-secondary pull-right navbar-brand"
+       [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']">
         <span class="glyphicon glyphicon-plus"></span>
     </a>
 </nav>
 
-<div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
-    <div class="col-xs-12">
-        <h1>
-            Lorem ipsum
-        </h1>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-heading.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor</h3>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-heading.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12">
-        <img class="img-responsive center-block" src="http://lorempixel.com/1920/1080/">
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-image.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12">
-        <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
-            e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-        </h4>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-heading.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-heading.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12 embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/mW6hFttt_KE" frameborder="0"
-                allowfullscreen>
-        </iframe>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-youtube.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
-        </div>
-    </div>
-    <div class="col-xs-12">
-        <h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor
-            e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-        </h4>
-        <div class="pull-right dk-widget-toolbar">
-            <a href="widget-heading.html" class="custom-widget">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <a href="#" class="custom-widget">
-                <span class="glyphicon glyphicon-menu-hamburger dk-text-dark"></span>
-            </a>
+<div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-xs-12">
+    <div *ngFor="let widget of widgets">
+        <div [ngSwitch]="widget['widgetType']">
+            <div *ngSwitchCase="'HEADING'">
+                <div class="col-xs-12">
+                    <app-widget-view-heading [widget]="widget"></app-widget-view-heading>
+                    <div class="pull-right dk-widget-toolbar">
+                        <a [routerLink]="[widget['_id']]"
+                           class="custom-widget">
+                            <span class="glyphicon glyphicon-cog"></span>
+                        </a>
+                        <a class="custom-widget">
+                            <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div *ngSwitchCase="'IMAGE'">
+                <div class="col-xs-12">
+                    <app-widget-view-image [widget]="widget"></app-widget-view-image>
+                    <div class="pull-right dk-widget-toolbar">
+                        <a [routerLink]="[widget['_id']]"
+                           class="custom-widget">
+                            <span class="glyphicon glyphicon-cog"></span>
+                        </a>
+                        <a class="custom-widget">
+                            <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div *ngSwitchCase="'YOUTUBE'">
+                <div class="col-xs-12">
+                    <app-widget-view-youtube [widget]="widget"></app-widget-view-youtube>
+                    <div class="pull-right dk-widget-toolbar">
+                        <a [routerLink]="[widget['_id']]"
+                           class="custom-widget">
+                            <span class="glyphicon glyphicon-cog"></span>
+                        </a>
+                        <a class="custom-widget">
+                            <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
