added create widget functionality

--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -4,7 +4,7 @@
     </a>
     <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Widgets </b></p>
     <a class="bg-secondary pull-right navbar-brand"
-       [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']">
+       [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget', 'new']">
         <span class="glyphicon glyphicon-plus"></span>
     </a>
 </nav>
