--- a/src/app/components/widget/widget-choose/widget-choose.component.html
+++ b/src/app/components/widget/widget-choose/widget-choose.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-    <a class="bg-secondary navbar-brand" href="widget-list.html">
+    <a class="bg-secondary navbar-brand"
+       [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <b class="navbar-brand dk-no-side-padding dk-no-margin"> Choose Widget </b>
@@ -8,7 +9,7 @@
   <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
     <ul class="list-group row">
       <li class="list-group-item text-primary dk-borderless">
-        <a href="widget-heading.html"> Header </a>
+        <a (click)="createWidget('HEADING')"> Header </a>
       </li>
       <li class="list-group-item text-primary dk-borderless">
         <a href="#"> Label </a>
@@ -26,10 +27,10 @@
         <a href="#"> Button </a>
       </li>
       <li class="list-group-item text-primary dk-borderless">
-        <a href="widget-image.html"> Image </a>
+        <a (click)="createWidget('IMAGE')"> Image </a>
       </li>
       <li class="list-group-item text-primary dk-borderless">
-        <a href="widget-youtube.html"> YouTube </a>
+        <a (click)="createWidget('YOUTUBE')"> YouTube </a>
       </li>
       <li class="list-group-item text-primary dk-borderless">
         <a href="#"> Data Table </a>
@@ -40,7 +41,7 @@
     </ul>
   </div>
   <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-    <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
+    <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
       <span class="glyphicon glyphicon-user text-primary"></span>
     </a>
   </nav>
